// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser/index.js cafeMenuParser should parse the html snippet 1`] = `
Array [
  Object {
    "body": Array [
      "BREAKFAST: Virgin Radio Bap Give Away",
      "LUNCH: Open club sandwich",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "monday",
  },
  Object {
    "body": Array [
      "BREAKFAST: Poached egg Florentine",
      "LUNCH: Baked chorizo hens egg, garlic bread and salad",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "tuesday",
  },
  Object {
    "body": Array [
      "BREAKFAST: Smoked bacon frittata",
      "LUNCH: Roasted aubergine and Parma ham on focaccia",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "wednesday",
  },
  Object {
    "body": Array [
      "BREAKFAST: Baked Smoked haddock Arnold Bennett",
      "LUNCH: Harissa salmon, roasted chick peas lemon yoghurt on khobez",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "thursday",
  },
  Object {
    "body": Array [
      "BREAKFAST: Smashed avocado, chilli and tomato on sourdough",
      "LUNCH: Loaded wedges",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "friday",
  },
]
`;

exports[`parser/index.js cafeMenuParser should parse the html snippet 2`] = `
Array [
  Object {
    "body": Array [
      "BREAKFAST: Baked hens egg, wilted spinach, potato and feta",
      "LUNCH: Samosa chat, Chana masala, mint yoghurt and Bombay mix (V)",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "monday",
  },
  Object {
    "body": Array [
      "BREAKFAST: Two cheese omelette, tomato and rocket (v)",
      "LUNCH: Caramelised goats cheese, balsamic onions and rocket on toasted focaccia",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "tuesday",
  },
  Object {
    "body": Array [
      "BREAKFAST: Waffle Wednesday with crispy bacon and maple syrup",
      "LUNCH: Salt beef bagel with gherkin, red onion and whole grain mustard mayo",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "wednesday",
  },
  Object {
    "body": Array [
      "BREAKFAST: Smoked haddock and chive frittata",
      "LUNCH: Hickory chicken, jalapenos fried onions and spiced wedges",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "thursday",
  },
  Object {
    "body": Array [
      "BREAKFAST: Toasted sourdough bread with smashed avocado, poached egg and crumbled goats cheese",
      "LUNCH: Pulled pork bap with caramelised onion, apple and sage stuffing",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "friday",
  },
]
`;

exports[`parser/index.js cafeMenuParser should parse the html snippet 3`] = `
Array [
  Object {
    "body": Array [
      "BREAKFAST: Protein punch loaded scrambled egg with spiced beans, seeds, spinach and tomato relish",
      "LUNCH: Crispy cod fish finger wrap served with sweet chilli slaw and cos lettuce",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "monday",
  },
  Object {
    "body": Array [
      "BREAKFAST: 'on toast' Crushed avocado, honey cured ham or baby spinach with a poached egg",
      "LUNCH: Grilled chicken burger served with salad and slaw",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "tuesday",
  },
  Object {
    "body": Array [
      "BREAKFAST: 'Baked ricotta on a flat mushroom with a tomato relish",
      "LUNCH: Slow poached flaked salmon baguette with a caper crème fraiche salad",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "wednesday",
  },
  Object {
    "body": Array [
      "BREAKFAST: ‘on toast’ crushed avocado, honey roast ham or baby spinach with a poached egg",
      "LUNCH: feta, olives and roast tomato in a pita",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "thursday",
  },
  Object {
    "body": Array [
      "BREAKFAST: full english breakfast wrap",
      "LUNCH: hot roast smoked salmon with a warm asparagus nicoise salad",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "friday",
  },
]
`;

exports[`parser/index.js cafeMenuParser should parse the html snippet 4`] = `
Array [
  Object {
    "body": Array [
      "BREAKFAST: Roasted red pepper, chilli and mint shakshuka baked Kentish eggs served with toasted Greenwich bloomer",
      "LUNCH: BLT - Braised grilled and glazed Waverly pork belly, crisp lettuce and heritage tomato on toasted bloomer",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "monday",
  },
  Object {
    "body": Array [
      "BREAKFAST: Crushed avocado on sourdough toast with honey roast ham, poached egg and baby spinach",
      "LUNCH: lightly dusted fish (hake, salmon, pollock) wrap with a slow braised fennel and tomato sauce on a bed of crunchy cos",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "tuesday",
  },
  Object {
    "body": Array [
      "BREAKFAST: Waffle Wednesday: Nutella, coconut-flavoured yoghurt, clementine or pomegranate seeds and chopped nuts",
      "LUNCH: Bish, Bash, Bosh - Ultimate falafel wrap in a charred soft flour tortilla with crunchy iceberg, plum tomato and a zesty lemon hummus (V)",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "wednesday",
  },
  Object {
    "body": Array [
      "BREAKFAST: Genuine Muffins - Sausage and egg muffin with American cheese and HP sauce or egg and American cheese muffin",
      "Side: Hash Browns",
      "LUNCH: Grilled Castlemead chicken breast, caramelised onion and Somerset brie sub with a baby leaf salad with dill pickle relish",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "thursday",
  },
  Object {
    "body": Array [
      "BREAKFAST: Home made baked beans on free range eggy crumpets. (V)",
      "LUNCH: Castlemead chicken souvlaki with apricot pearled Israeli cous cous and oregano herbed tomato relish served on open flat bread",
    ],
    "color": "#3126A2",
    "subsections": Object {},
    "title": "friday",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 1`] = `
Array [
  Object {
    "body": Array [
      "CRISPY PORK BELLY STRIP WITH CIDER GRAVY",
      "SALMON & TOFU ZEN BOWL",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "SMASHED SWEDE, BRAISED RED CABBAGE, PICKLED VEG SALAD OR GLAZED PAK CHOY",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "SOFT TACO FILLED WITH COURGETTE CORN OR CHICKEN MOLE WITH RICE VERDE",
    ],
    "color": "#00BFFF",
    "subsections": Object {
      "sides": Array [
        "GREEN BEAN WITH SESAME AND CHARD BROCCOLI",
      ],
    },
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "CARROT & CORIANDER",
      "CHICKEN, SWEET POTATO & COCONUT",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 2`] = `
Array [
  Object {
    "body": Array [
      "Shepherd's pie or Veggie pie",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Glazed Carrot/ mange tout/ crusty bread",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Roots and Shoots with chicken, beet falafel (v) or poached salmon",
    ],
    "color": "#007404",
    "subsections": Object {
      "sides": Array [
        "warm seasonal salads",
      ],
    },
    "title": "Healthy Bar",
  },
  Object {
    "body": Array [
      "PHAT BOUY BURGER",
    ],
    "color": "#00BFFF",
    "subsections": Object {
      "sides": Array [
        "Rainbow slaw/fries",
      ],
    },
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "Cream of mushroom (v)",
      "Pork noodle soup",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 3`] = `
Array [
  Object {
    "body": Array [
      "Beef and onion pie/ Squash and feta, mash liquor",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Green panache, green beans and pea",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Roots and Shoots with falafel add on chicken or baked salmon",
    ],
    "color": "#007404",
    "subsections": Object {
      "sides": Array [
        "warm seasonal salads",
      ],
    },
    "title": "Healthy Bar",
  },
  Object {
    "body": Array [
      "Slow roast harissa lamb, pitta breads, mint yoghurt, shredded lettuce add vegi grilled hummus",
    ],
    "color": "#00BFFF",
    "subsections": Object {
      "sides": Array [
        "Rainbow slaw or fries",
      ],
    },
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "Leek and potato (v)",
      "Spiced minestrone",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 4`] = `
Array [
  Object {
    "body": Array [
      "Genuine Chip Shop - Punk IPA battered Catch of The Day & battered sausages, savaloys",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Chips, peas & mushy peas",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Steamed day boat fish, new potato",
    ],
    "color": "#007404",
    "subsections": Object {
      "sides": Array [
        "Steamed brocolli",
      ],
    },
    "title": "Healthy Bar",
  },
  Object {
    "body": Array [
      "Dirty rice bar, prawn roast chicken and CORIANDER",
    ],
    "color": "#00BFFF",
    "subsections": Object {
      "sides": Array [
        "Wedges",
      ],
    },
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "Carrot and cumin (v)",
      "Spiced lemon grass chicken and coconut",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 5`] = `
Array [
  Object {
    "body": Array [
      "Beef and onion pie/ Squash and feta, mash liquor",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Green panache, green beans and pea",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Roots and Shoots with falafel add on chicken or baked salmon",
    ],
    "color": "#007404",
    "subsections": Object {
      "sides": Array [
        "warm seasonal salads",
      ],
    },
    "title": "Healthy Bar",
  },
  Object {
    "body": Array [
      "Slow roast harissa lamb, pitta breads, mint yoghurt, shredded lettuce add vegi grilled hummus",
    ],
    "color": "#00BFFF",
    "subsections": Object {
      "sides": Array [
        "Rainbow slaw or fries",
      ],
    },
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "Leek and potato (v)",
      "Spiced minestrone",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 6`] = `
Array [
  Object {
    "body": Array [
      "Garlic and smoked paprika chicken thigh/ Fried cauliflower and aioli",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Chickpea and roast garlic salad",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "VEGAN BAR Californian tofu wrap (v)",
    ],
    "color": "#007404",
    "subsections": Object {
      "sides": Array [
        "Chilli, roast red onion and preserved lemon salad",
      ],
    },
    "title": "Healthy Bar",
  },
  Object {
    "body": Array [
      "Seafood Thai green curry, Vegetable red curry Jasmine rice",
    ],
    "color": "#00BFFF",
    "subsections": Object {
      "sides": Array [
        "Spring roll, Asian slaw, sweet chilli, prawn crackers",
      ],
    },
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "Baked apple and celeriac",
      "Lentil and smoked bacon",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 7`] = `
Array [
  Object {
    "body": Array [
      "Garlic and smoked paprika chicken thigh/ Fried cauliflower and aioli",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Chickpea and roast garlic salad",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "VEGAN BAR Californian tofu wrap (v)",
    ],
    "color": "#007404",
    "subsections": Object {
      "sides": Array [
        "Chilli, roast red onion and preserved lemon salad",
      ],
    },
    "title": "Healthy Bar",
  },
  Object {
    "body": Array [
      "Seafood Thai green curry, Vegetable red curry Jasmine rice",
    ],
    "color": "#00BFFF",
    "subsections": Object {
      "sides": Array [
        "Spring roll, Asian slaw, sweet chilli, prawn crackers",
      ],
    },
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "Baked apple and celeriac",
      "Lentil and smoked bacon",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 8`] = `
Array [
  Object {
    "body": Array [
      "Genuine Chip Shop",
      "Punk IPA battered catch of the day, battered sausages and saveloys",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Chips, peas & mushy peas",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Steamed day boat fish with new potato",
    ],
    "color": "#007404",
    "subsections": Object {
      "sides": Array [
        "Steamed broccoli",
      ],
    },
    "title": "Healthy Bar",
  },
  Object {
    "body": Array [
      "Burns Night",
      "roast haggis, crispy neeps and tatties with whisky sauce",
    ],
    "color": "#00BFFF",
    "subsections": Object {
      "sides": Array [
        "Wedges",
      ],
    },
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "Carrot and cumin",
      "Spiced lemon grass chicken and coconut",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 9`] = `
Array [
  Object {
    "body": Array [
      "Genuine Chip Shop - battered Pollock & battered sausages, savaloys",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Chips, peas & mushy peas",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Pulled jack fruit",
      "Freshly baked salmon",
      "served with red onion freekeh, toasted hazelnut and lemon dressing",
    ],
    "color": "#007404",
    "subsections": Object {},
    "title": "Healthy Bar",
  },
  Object {
    "body": Array [
      "Chilli glazed chicken, wild rice and red pepper",
    ],
    "color": "#00BFFF",
    "subsections": Object {
      "sides": Array [
        "Glazed sugar snaps and broccoli",
      ],
    },
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "Roasted parsnip (v)",
      "Curried cauliflower and bacon",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 10`] = `
Array [
  Object {
    "body": Array [
      "CHICKEN KATSU CURRY WITH STICKY RICE, SPRING ONION AND CHILLI",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "VEGETABLE SPRING ROLL OR EDAMAME BEANS, CHILLI OIL PONZU (V)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "MEXICAN SPICED BAKED FISH WITH TOMATO AND LIME SAUCE",
      "CHILLI BEEF WITH ARROZ VERDE",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "NACHOS, SPICED POTATO WEDGE, SOUR CREAM AND CHIVES (V)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "BUILD YOUR OWN BURGER - BRIOCHE BUN, TOMATO, LETTUCE, GHERKIN AND CHILLI WITH A CHOICE OF",
      "BEEF PATTY",
      "VEGGIE PATTY (V)",
    ],
    "color": "#00BFFF",
    "subsections": Object {
      "sides": Array [
        "CHUNKY STEAK CHIPS",
      ],
    },
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "CARROT AND ORANGE (V)",
      "CHILLI COCONUT CHICKEN",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 11`] = `
Array [
  Object {
    "body": Array [
      "Baked Swedish beef meatballs with celeriac mash",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Warm beetroot and apple salad or crusty farm house loaf (V)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Cumberland sausage ring, lyonnaise potato and roasted plum tomato sauce",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Buttered cabbage and roasted Kentish root vegetables (v)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Slow roast cauliflower, tomato, preserved lemon pesto, with chicken thigh or crispy smoked paprika coated halloumi (V)",
    ],
    "color": "#00BFFF",
    "subsections": Object {},
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "Roast mushroom and thyme (V)",
      "Chicken and bacon soup",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 12`] = `
Array [
  Object {
    "color": "#C41017",
    "subsections": Object {
      "made to order pizza bar": Array [
        "live cooking at its best with a fresh khobez base and a selection of delicious toppings",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Mexican spiced baked fish with tomato and lime braised beans",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Nachos, spiced potato wedge or sour cream and chives (V)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Southern style slow cooked BBQ pork ribs",
      "jambalaya (V)",
    ],
    "color": "#00BFFF",
    "subsections": Object {
      "sides": Array [
        "Onion rings or spiced wedges (V)",
      ],
    },
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "Carrot and orange soup (v)",
      "Chilli coconut chicken",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 13`] = `
Array [
  Object {
    "body": Array [
      "Genuine Chip Shop - Catch of The Day, battered sausages and saveloys",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Chips, peas, mushy peas, pickled eggs, pickled onions, gherkins",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Lemon & garlic roasted Suffolk chicken with salt lemon gnocchi and seasonal green",
    ],
    "color": "#C41017",
    "subsections": Object {},
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "FOODARI POP-UP with James Perkins from Cherry Tree Farm -",
      "Come and meet our farmer & Checkout the theatre bar for lunch & Purchase some RSPCA Assured eggs",
      "pop-up dish: wild garlic risotto with poached Kent hens egg",
    ],
    "color": "#9933FF",
    "subsections": Object {},
    "title": "Theatre Bar",
  },
  Object {
    "body": Array [
      "Puy lentil and pumpkin soup (v)",
      "Sicilian tomato and fish stew",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 14`] = `
Array [
  Object {
    "body": Array [
      "Haddock and smoked salmon fish cake with buttered leek and chive sauce",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Green bean, kale and cabbage and garden salad",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Chicken tikka masala",
      "vegetable jalfrezi served (V)",
      "with pilaf rice",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Vegetable samosa, onion bhaji, poppadum, mango sauce, lime pickle",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Grains and Greens Bar - grilled chicken breast, grains, pearl barley, couscous, toasted quinoa, carrot, garden leaves and hummus",
    ],
    "color": "#007404",
    "subsections": Object {
      "sides": Array [
        "red onion and potato salad",
      ],
    },
    "title": "Healthy Station",
  },
  Object {
    "body": Array [
      "Slow roasted tomato and paprika (v)",
      "Beef minestrone",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 15`] = `
Array [
  Object {
    "body": Array [
      "Grains and greens: poached South Coast catch of the day",
      "marinated grilled halloumi (V)",
      "Flavours of the sunny Deep South: chicken and sausage gumbo",
      "Creole farmers market vegetable jambalaya (V)",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Dirty Creole rice or sweet potato and apple salad (V)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Dry aged Scotch beef burger with a seeded brioche bun, tomato, lettuce, gherkin and cheese",
    ],
    "color": "#3360ff",
    "subsections": Object {
      "sides": Array [
        "Smoked bacon jam, chunky steak chips, onion rings or red cabbage and pomegranate slaw (V)",
      ],
    },
    "title": "Theatre Station",
  },
  Object {
    "body": Array [
      "Broccoli soup with stilton topping (v)",
      "Prawn and coriander noodle broth",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 16`] = `
Array [
  Object {
    "body": Array [
      "'Chop shop' grilled rare breed pork chop, colcannon, wild mushroom sauce and lemon wedges",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Steamed and buttered spring greens (V)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Build your gnocchi - rosemary and roasted onion lamb ragu or spinach, ricotta and Kentish foraged wild garlic",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Rosemary focaccia or garden salad (V)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Grilled harissa and lemon Castlemead chicken with sundried tomato bulgur wheat and cous cous",
    ],
    "color": "#00BFFF",
    "subsections": Object {
      "sides": Array [
        "Zaatar roasted squash with spiced yoghurt and pickled chillies, flat bread, vegetable samosa (V)",
      ],
    },
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "Butter bean and thyme soup (V)",
      "Bacon, lentil and sweetcorn",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 17`] = `
Array [
  Object {
    "body": Array [
      "Vive la France - Castlemead braised chicken thigh with pancetta and puy lentils or poached salmon with peas a la Francaise",
    ],
    "color": "#CCCCCC",
    "subsections": Object {
      "sides": Array [
        "Haricots vert, baguette, lyonnaise potatoes (V)",
      ],
    },
    "title": "No name 😔",
  },
  Object {
    "body": Array [
      "Kentish farmer's market roasted broccoli and toasted almond risotto with a Kent.co poached egg",
    ],
    "color": "#CCCCCC",
    "subsections": Object {
      "sides": Array [
        "Blue cheese, celery and chard salad (V)",
      ],
    },
    "title": "No name 😔",
  },
  Object {
    "body": Array [
      "Danish frikadelle - Kentish red onions and roasted garlic meatballs with braised red cabbage and pickled cucumber",
    ],
    "color": "#00BFFF",
    "subsections": Object {
      "sides": Array [
        "Crushed Jersey royals or warm beetroot and apple salad (V)",
      ],
    },
    "title": "Chefs Theatre",
  },
  Object {
    "body": Array [
      "Cream of mushroom and tarragon soup (V)",
      "Beef and onion soup",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 18`] = `
Array [
  Object {
    "body": Array [
      "Genuine Chip Shop - battered pollock, battered sausages and saveloys",
    ],
    "color": "#3126A2",
    "subsections": Object {
      "sides": Array [
        "Chips, peas, mushy peas, pickled eggs, pickled onions and gherkins",
      ],
    },
    "title": "Terrace Cafe",
  },
  Object {
    "body": Array [
      "Roasted Suffolk chicken and wild mushroom pie",
      "Kentish farmers market vegetable pie (V)",
      "served with buttered mashed potato",
    ],
    "color": "#3126A2",
    "subsections": Object {
      "sides": Array [
        "Steamed and buttered kale and cabbage",
      ],
    },
    "title": "Terrace Cafe",
  },
  Object {
    "body": Array [
      "Puy lentil and pumpkin soup (v)",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 19`] = `
Array [
  Object {
    "body": Array [
      "The Real St George's Day - steak and kidney pie with beer braised onions and horseradish mash",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Buttered greens (V)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Fresh and crisp Farmers market Cantonese style vegetable stir fry and tempura vegetable (V)",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Ginger and garlic bok choy (V)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "A British Classic - toad in the hole, cumberland sausage, roasted new potatoes, buttered carrots and a rich red onion gravy",
    ],
    "color": "#3360ff",
    "subsections": Object {},
    "title": "Theatre Station",
  },
  Object {
    "body": Array [
      "Curried cauliflower (v)",
      "Roasted tomato bacon and chickpea",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 20`] = `
Array [
  Object {
    "color": "#C41017",
    "subsections": Object {
      "add on": Array [
        "Sticky chicken wings, celery and blue cheese sauce",
      ],
      "made to order pizza bar": Array [
        "fresh Khobez base served with a selection of delicious toppings",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Vegan slow roasted rosemary and thyme rubbed butternut with a freekeh and cured rainbow salad topped with a fresh tomato salsa (V)",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Rainbow slaw or garlic and herb courgettes and broad beans (V)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "'Turkish Delight' - rose and cumin slow cooked shoulder of lamb served with pepper roasted herbed barley and Turkish rice",
    ],
    "color": "#3360ff",
    "subsections": Object {
      "sides": Array [
        "Tavada (Turkish spiced potato), pitta, hummus, tzatziki, flat bread (V)",
      ],
    },
    "title": "Theatre Station",
  },
  Object {
    "body": Array [
      "Sweetcorn chowder (v)",
      "Chicken noodle soup",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 21`] = `
Array [
  Object {
    "body": Array [
      "Pulled beef chimichanga (Tex-Mex Burrito BOWL) with guacamole, sour cream and a crunchy salad",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Nacho chips and salsa, tomato spring onion salad (v)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Caramelised red onion falafel served with lemon cured cabbage, carrots and shredded lettuce with a garlic sauce and tomato cumin relish (V)",
    ],
    "color": "#008575",
    "subsections": Object {
      "sides": Array [
        "Spiced potato wedges (V)",
      ],
    },
    "title": "Vegetarian Station",
  },
  Object {
    "body": Array [
      "Lemon and rosemary roast Castle mead chicken leg with a roast chestnut mushroom sauce",
    ],
    "color": "#3360ff",
    "subsections": Object {
      "sides": Array [
        "Kent new season crushed potato, crispy caper and baby gem salad (V)",
      ],
    },
    "title": "Theatre Station",
  },
  Object {
    "body": Array [
      "Red lentil and sweet potato (v)",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 22`] = `
Array [
  Object {
    "body": Array [
      "Genuine Chip Shop - battered pollock, breaded scampi, beef and onion pie, battered sausages and saveloys",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Chips, peas and mushy peas (V)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Pickled red cabbage marinated halloumi on a bed of freekeh, roasted peppers, aubergine and courgette salad with a sun blushed tomato vinaigrette (V)",
    ],
    "color": "#008575",
    "subsections": Object {
      "sides": Array [
        "Herb and garlic bread (V)",
      ],
    },
    "title": "Vegetarian Station",
  },
  Object {
    "body": Array [
      "BBQ grilled turkey escalope and a succotash (sweetcorn and beans flavoured with chilli and garlic)",
    ],
    "color": "#3360ff",
    "subsections": Object {
      "sides": Array [
        "Cajun spiced potatoes, fried spring greens with onion and garlic seasoning (V)",
      ],
    },
    "title": "Theatre Station",
  },
  Object {
    "body": Array [
      "Vegan red pepper and tomato (v)",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 23`] = `
Array [
  Object {
    "color": "#C41017",
    "subsections": Object {
      "made to order pizza bar": Array [
        "fresh Khobez base served with a selection of delicious toppings",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Vegan counter - roasted bell pepper and chickpea tagine served with herb infused cous cous and a minted cabbage and broccoli salad (V)",
    ],
    "color": "#008575",
    "subsections": Object {
      "sides": Array [
        "harissa green beans (V)",
      ],
    },
    "title": "Vegan Station",
  },
  Object {
    "body": Array [
      "Salmon and tuna thai fish cake poke bowl served with flat rice noodles, crunchy vegetables and a miso broth",
    ],
    "color": "#3360ff",
    "subsections": Object {},
    "title": "Theatre Station",
  },
  Object {
    "body": Array [
      "Vegan minted green split pea (v)",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 24`] = `
Array [
  Object {
    "body": Array [
      "Genuine Chip Shop - battered pollock, breaded scampi, beef and onion pie, battered sausages and saveloys",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Chips, peas and mushy peas (V)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "buffalo Broccoli bites served with a crème fraiche dressing and a salsa rosso rice salad (V)",
    ],
    "color": "#C41017",
    "subsections": Object {
      "sides": Array [
        "Cajun spiced potato wedges (V)",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Korean chicken bulgogi (marinated chicken BBQ) served with Bibimbap (savoury rice) and a fried egg",
    ],
    "color": "#3360ff",
    "subsections": Object {
      "sides": Array [
        "spring roll, prawn crackers, steamed bun (V)",
      ],
    },
    "title": "Theatre Station",
  },
  Object {
    "body": Array [
      "Creamed leek (v)",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;

exports[`parser/index.js mainMenuParser should parse the html snippet 25`] = `
Array [
  Object {
    "color": "#C41017",
    "subsections": Object {
      "extras": Array [
        "Limited home made calzones",
      ],
      "made to order pizza bar": Array [
        "fresh Khobez base served with a selection of delicious toppings",
      ],
    },
    "title": "From the Oven",
  },
  Object {
    "body": Array [
      "Spinach and zucchini fritters topped with a black bean, avocado and tomato salad with a shredded beetroot vinaigrette (v)",
    ],
    "color": "#008575",
    "subsections": Object {
      "sides": Array [
        "Spiced potato wedges (v)",
      ],
    },
    "title": "Vegetarian Station",
  },
  Object {
    "body": Array [
      "Crispy fried pork katsu served with a rich curry sauce with fragrant rice and a pickled cucumber salad",
    ],
    "color": "#3360ff",
    "subsections": Object {
      "sides": Array [
        "Wasabi fries, Chilli braised cabbage and kale",
      ],
    },
    "title": "Theatre Station",
  },
  Object {
    "body": Array [
      "Sweetcorn chowder (v)",
      "Chicken and country vegetable",
    ],
    "color": "#e6e600",
    "subsections": Object {},
    "title": "Soup",
  },
]
`;
